[package]
name = "dns_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
flexi_logger = "0.29"
log = "0.4"
clap = { version = "4", features = ["derive"] }
lru = "0.12"
rand = "0.8"
